[package]
name = "composefilter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
regex = "1.5.6"
duct = "0.13.5"

[profile.release]
opt-level = 'z'     # Size optimization level
lto = true          # Link Time Optimization
codegen-units = 1   # Number of codegen units, fewer = more optimizations
panic = 'abort'
strip = true        # Strip debug symbols
